--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "binaryen"]
 	path = binaryen
-	url = git@github.com:WebAssembly/binaryen.git
+	url = https://github.com/WebAssembly/binaryen.git
